--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableOverview.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableOverview.razor
@@ -5,6 +5,7 @@
 @using MySqlManager.Services
 @using MySqlManager.Dtos
 @inject SqlCommandService SqlCommandService
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
 
 <h1>Database Overview</h1>
