--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableInsert.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableInsert.razor
@@ -3,6 +3,7 @@
 @using MySqlManager.Components.Layout
 @using MySqlManager.Services
 @using MySqlManager.Dtos
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
 
 <h1>Insert</h1>
