--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableSearch.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableSearch.razor
@@ -4,6 +4,7 @@
 @using MySqlManager.Services
 @using MySqlManager.Dtos
 @inject MySqlManagerService MySqlManagerService
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
 
 <h1>Search</h1>
