--- a/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
+++ b/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
@@ -3,7 +3,8 @@
 @implements IDisposable
 @inject DatabaseInformationService DatabaseInformationService
 @inject NavigationManager NavigationManager
-@rendermode InteractiveServer
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
+@attribute [StreamRendering]
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -21,9 +22,9 @@
             </NavLink>
         </div>
         
-        @if (_databaseInformations.Count > 0)
+        @if (DatabaseInformationService.DatabaseList.Count > 0)
         {
-            foreach (var item in _databaseInformations)
+            foreach (var item in DatabaseInformationService.DatabaseList)
             {
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="@($"/database/{item.Name}")">
@@ -47,11 +48,11 @@
 
 @code {
 
-    private List<DatabaseInformation> _databaseInformations = new List<DatabaseInformation>();
+    // private List<DatabaseInformation> _databaseInformations = new List<DatabaseInformation>();
     
     protected override void OnInitialized()
     {
-        _databaseInformations = DatabaseInformationService.DatabaseList;
+        // _databaseInformations = DatabaseInformationService.DatabaseList;
         DatabaseInformationService.OnDatabaseListChanged += RefreshUi;
     }
 
@@ -62,7 +63,7 @@
     
     private async void RefreshUi()
     {
-        _databaseInformations = DatabaseInformationService.DatabaseList;
+        // _databaseInformations = DatabaseInformationService.DatabaseList;
         Console.WriteLine("NavMenu received Database List Change");
         await InvokeAsync(StateHasChanged);
     }
