--- a/MySqlManager/MySqlManager/Components/Pages/Database/DatabaseNewTable.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Database/DatabaseNewTable.razor
@@ -3,7 +3,7 @@
 @using MySqlManager.Dtos
 @using MySqlManager.Services
 @inject MySqlManagerService MySqlManagerService
-@rendermode @(new InteractiveServerRenderMode(prerender: false))
+@rendermode @(new InteractiveServerRenderMode(prerender: true))
 
 <div class="mb-3">
     <label for="tableName" class="form-label">Table Name</label>
