--- a/MySqlManager/MySqlManager/Components/App.razor
+++ b/MySqlManager/MySqlManager/Components/App.razor
@@ -21,7 +21,7 @@
 <script src="bootstrap/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/i18n/defaults-*.min.js"></script>
-<script src="_framework/blazor.web.js"></script>
+<script src="_framework/blazor.server.js"></script>
 </body>
 
 </html>
