--- a/MySqlManager/MySqlManager/Components/Layout/MainLayout.razor
+++ b/MySqlManager/MySqlManager/Components/Layout/MainLayout.razor
@@ -15,6 +15,8 @@
             <article class="content px-4">
                 @Body
             </article>
+            
+            <Overlay />
         </main>
     </div>
 </CascadingValue>
