--- a/MySqlManager/MySqlManager/Components/Pages/Database/DatabaseOverview.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Database/DatabaseOverview.razor
@@ -70,6 +70,8 @@ else
 
 
 @code {
+    // TODO use bootstrap modal instead of ovleray component
+    
     private List<TableInformation>? _tableList;
     private bool _loading;
     
