auto select correct collation for new database

--- a/MySqlManager/MySqlManager/Components/Pages/Home.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Home.razor
@@ -200,6 +200,7 @@
             Console.WriteLine("Loading server version...");
             _serverInformation = await DatabaseInformationService.GetServerVersion();
             _collations = await DatabaseInformationService.GetCollations();
+            _newDatabaseCollation = await DatabaseInformationService.GetServerCollation();
         }
         else
         {
