--- a/MySqlManager/MySqlManager/wwwroot/css/app.css
+++ b/MySqlManager/MySqlManager/wwwroot/css/app.css
@@ -388,3 +388,12 @@ main {
     margin-left:auto;
     margin-right:auto;
 }
+
+.dropdown-menu {
+    background: var(--color-surface0);
+}
+
+.dropdown-item.active {
+    background-color: var(--color-accent0);
+    color: var(--color-text-dark);
+}
